--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
-spring.application.name=ESLOADER-V1
-server.servlet.context-path=/loader/catalogue
-server.port=8080
+server.port=8081
+#server.servlet.context-path=/query
 elasticsearch.host=https://vpc-digitalx-dev-solr-es-hne32eyterqfesg3zzkpeg25q4.eu-west-1.es.amazonaws.com
 ES_PORT=443
 ES_PROTOCOL=https
